Add System_Control_AIoT and UARTn_AIoT components
Introduces new components for system control and UART functionality, including source and header files. Updates UI event handling for WiFi connection, refactors buffer and resolution definitions for display, improves touch debounce logic, and adjusts CMakeLists dependencies. Also adds new documentation and images for hardware architecture.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,13 @@
 idf_component_register(
     SRCS "main_AIoT.c"
     INCLUDE_DIRS "."
-    REQUIRES nvs_flash Configuracion_AIoT WiFi_AIoT IO_AIoT EEZ_AIoT lvgl
+    REQUIRES
+        nvs_flash
+        esp_system
+        lvgl__lvgl
+        Configuracion_AIoT
+        IO_AIoT
+        WiFi_AIoT
+        UARTn_AIoT
+        EEZ_AIoT
 )
