--- a/components/Configuracion_AIoT/CMakeLists.txt
+++ b/components/Configuracion_AIoT/CMakeLists.txt
@@ -3,5 +3,9 @@ file(GLOB_RECURSE SOURCES "src/*.c")
 idf_component_register(
     SRCS ${SOURCES}
     INCLUDE_DIRS "include"
-    REQUIRES lvgl esp_lcd
+    REQUIRES 
+        driver 
+        esp_timer 
+        esp_lcd 
+        lvgl__lvgl
 )
