Add documentation and constants to CMake and touch driver
Added file headers and ESP-IDF v5.5.1 standards documentation to all CMakeLists.txt files for better maintainability. In xpt2046_lvgl9.c, introduced display resolution and clock speed constants, and updated code to use these constants for improved clarity and configurability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,7 @@
+# File: CMakeLists.txt
+# Description: Component registration with dependencies.
+# Standards: ESP-IDF v5.5.1
+
 cmake_minimum_required(VERSION 3.16)
 set(EXTRA_COMPONENT_DIRS components)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
