--- a/components/Configuracion_AIoT/CMakeLists.txt
+++ b/components/Configuracion_AIoT/CMakeLists.txt
@@ -1,3 +1,7 @@
+# File: components/Configuracion_AIoT/CMakeLists.txt
+# Description: Component registration with dependencies.
+# Standards: ESP-IDF v5.5.1
+
 file(GLOB_RECURSE SOURCES "src/*.c")
 
 idf_component_register(
