--- a/components/UARTn_AIoT/CMakeLists.txt
+++ b/components/UARTn_AIoT/CMakeLists.txt
@@ -1,3 +1,7 @@
+# File: components/UARTn_AIoT/CMakeLists.txt
+# Description: Component registration with dependencies.
+# Standards: ESP-IDF v5.5.1
+
 idf_component_register(
     SRCS 
         src/UARTn_AIoT.cpp
