--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,7 @@
+# File: main/CMakeLists.txt
+# Description: Component registration with dependencies.
+# Standards: ESP-IDF v5.5.1
+
 idf_component_register(
     SRCS "main_AIoT.c"
     INCLUDE_DIRS "."
